# clg_ocaml

./: README.md  clg.opam  dune-project  flake.nix  makefile
.github/workflows/: main.yml
lib/: clg_yaml.ml  clg_yaml.mli  dune
test/: dune
test/inputs/succ/: clg_template.yml
